@@ -262,6 +262,7 @@ enum CodecID {
 
     CODEC_ID_G2M        = MKBETAG( 0 ,'G','2','M'),
     CODEC_ID_V308       = MKBETAG('V','3','0','8'),
+    CODEC_ID_YUV4       = MKBETAG('Y','U','V','4'),
 
     /* various PCM "codecs" */
     CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
